--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <nav>
                     <ul>
                         <li><a href="#intro">Introduction</a></li>
-                        <li><a href="#about">Qui sommes-nous</a></li>
+                        <li><a href="#about">Qui sommes-nous ?</a></li>
                         <li><a href="#offer">Notre aide</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <!--<li><a href="#elements">Elements</a></li>-->
@@ -51,11 +51,31 @@
             <div id="main">
                 <!-- Intro -->
                 <article id="intro">
-                    <h2 class="major">Introduction</h2>
+                    <h2 class="major">La légende de Melting Hearts</h2>
                     <span class="image main"
                         ><img src="images/introduction.jpg" alt=""
                     /></span>
-                    <h2 class="article__subheading">I. Introduction</h2>
+                    <h2 class="article__subheading">I. Nos valeurs</h2>
+                    <p class="article__p">
+                        EMPATHIE, SOLIDARAITE, HUMANISME, SAVOIR, ASPIRATIONS
+                        INDIVIDUELLE ET COLLECTIVE
+                    </p>
+                    <p class="article__p">Notre vision est que:</p>
+                    <p class="article__indent">
+                        - Chacun de nous possède des ressources et est en
+                        capacité d’évolution à condition qu’une attitude de
+                        confiance et de respect se créé entre les intervenants
+                        et chacun vis-à-vis de soi-même !
+                        <br />
+                        <br />
+                        - Si une personne ne possède pas les ressources
+                        nécessaires pour atteindre ses objectifs, elle est en
+                        capacité de les acquérir.
+                        <br />
+                        <br />
+                        - Il n’y a pas d’échec mais des résultats.
+                    </p>
+                    <h2 class="article__subheading">II. Introduction</h2>
                     <p>
                         Nous avons la conviction que nous sommes tous sur cette
                         planète avec des dons bien spécifiques … des dons qui
@@ -90,28 +110,171 @@
                         ferons-nous émerger sereinement vos talents et
                         aspirations pour poser des choix ambitieux et réalistes.
                     </p>
-                    <h2 class="article__subheading">II. Nos valeurs</h2>
-                    <p class="article__p">
-                        EMPATHIE, SOLIDARAITE, HUMANISME, SAVOIR, ASPIRATIONS
-                        INDIVIDUELLE ET COLLECTIVE
-                    </p>
-                    <p class="article__p">Notre vision est que:</p>
-                    <p class="article__indent">
-                        - Chacun de nous possède des ressources et est en
-                        capacité d’évolution à condition qu’une attitude de
-                        confiance et de respect se créé entre les intervenants
-                        et chacun vis-à-vis de soi-même !
+
+                    <h2 class="article__subheading">
+                        Découvrez les personnes qui travaillent avec nous:
+                    </h2>
+                    <nav>
+                        <ul class="employee__nav">
+                            <li>
+                                <a href="#Delphine">Delphine Ragueneau</a>
+                            </li>
+                            <li><a href="#Brigitte">Brigitte Gautier</a></li>
+                        </ul>
+                    </nav>
+                </article>
+
+                <!-- Employees -->
+
+                <!-- Delphine -->
+                <article id="Delphine">
+                    <h2 class="major">Delphine Ragueneau</h2>
+                    <div class="employee__title">
+                        <span class="employee__img"
+                            ><img src="images/DelphineR.JPG" alt=""
+                        /></span>
+                        <h2 class="article__subheading employee__subheading">
+                            "Jeune, je faisais partie de ces personnes qui ont
+                            un parcours dit particulier"
+                        </h2>
+                    </div>
+                    <p class="">
+                        Mes résultats à l’école n’étaient pas mauvais, mais je
+                        n’accrochais pas les cours, je ne voulais pas être de
+                        celles qui choisissent un travail par défaut ! Nous
+                        étions dans les années 90 et à cette époque il était
+                        encore bien vu de travailler à 18ans et d’apprendre sur
+                        le tas !
                         <br />
                         <br />
-                        - Si une personne ne possède pas les ressources
-                        nécessaires pour atteindre ses objectifs, elle est en
-                        capacité de les acquérir.
+                        La vie étant ce qu’elle est… je n’ai pas fait exception
+                        et j’ai après le bac, trouvé un emploi au sein d’une
+                        grande banque privée et en CDI ! Autodidacte ils m’ont
+                        tout appris, toujours à la recherche de la connaissance,
+                        je me suis donc focalisé sur le monde du travail !
                         <br />
                         <br />
-                        - Il n’y a pas d’échec mais des résultats.
+                        Après 2001, par la force des choses, j’ai pratiqué
+                        longtemps le monde de l’intérim et j’ai joué le jeu
+                        d’être le caméléon à l’infini…non pas par dépit mais par
+                        choix et assouvir ma soif de connaissances ! … Le temps
+                        passant très vite ! 20 ans après, un besoin de retourner
+                        en harmonie avec mon « moi » et mes besoins réels pour
+                        avancer me pousse à tout chambouler !
+                        <br />
+                        <br />
+                        Je décide donc de reprendre ma vie professionnelle en
+                        main et de redéfinir ce que je voulais faire ! Et ce
+                        malgré l’âge et le marché instable sur lequel on vit !
+                        Parce que je suis certaine que le travail n’est pas une
+                        contrainte au contraire ! Et que, quand on le fait avec
+                        passion et le cœur, c’est une combinaison implacable
+                        pour le bonheur et la paix intérieure ! Lors de mon long
+                        parcours en interim, j’ai eu la chance de rencontrer un
+                        grand nombre de personnes qui bien que compétentes dans
+                        leur emploi, disposaient de dons bien spécifiques
+                        (artistique, manuel, etc.) et rêvaient secrètement d’en
+                        faire leur métier et d’en gagner leur vie ! Et souvent
+                        je me disais, « cela serait tellement parfait de pouvoir
+                        allier des sociétés et des employés, embauchés pour ce
+                        qu’ils aiment et savent faire et non pour ce qu’ils
+                        représentent sur un papier (durement gagné je ne nie
+                        pas, mais qui nous cloisonne quelquefois selon certains
+                        domaines!) !
+                        <br />
+                        <br />
+                        Pour exemple en interim il m’était possible d’occuper
+                        des postes à BAC+4 ou plus et de gagner ma vie
+                        correctement, car ils embauchent à l’expérience en
+                        interim 😁. Merci a eux ! et en CDI j’étais bloquée par
+                        des grilles de diplômes et donc payée au minimum, il
+                        m’était impossible d’avoir un poste fixe bien payé ! Je
+                        ne restais donc jamais longtemps 😟.
+                        <br />
+                        <br />
+                        Et c’est de là que la vie nous a fait un beau cadeau et
+                        nous a réunies Brigitte Gautier et Moi. Nous sommes
+                        habités par l’envie d’aider les personnes qui le
+                        souhaitent et en ont besoin , à trouver un emploi qui
+                        les représente vraiment et qui les anime ! Et de
+                        permettre aux entreprises qui auraient à coeur de
+                        changer un peu la norme, de collaborer en toute
+                        simplicité avec des profils qui leur correspondent et
+                        qui apporteront au candidat l’élément manquant pour
+                        qu’ils s’accomplissent … un job de rêve basé sur
+                        l’humain, ses dons et ses envies profondes ! C’est une
+                        combinaison qui marche à 100 %!:)
                     </p>
 
-                    <p></p>
+                    <a href="#intro" class="article__p"
+                        >Retourner à l'introduction</a
+                    >
+                </article>
+
+                <!-- Brigitte -->
+
+                <article id="Brigitte">
+                    <h2 class="major">Brigitte Gautier</h2>
+                    <div class="employee__title">
+                        <span class="employee__img"
+                            ><img src="images/pic01.jpg" alt=""
+                        /></span>
+                        <h2 class="article__subheading employee__subheading">
+                            "J’ai voulu devenir « passeur » : de connaissances,
+                            de techniques professionnelles, de philosophie de
+                            vie…"
+                        </h2>
+                    </div>
+                    <p class="">
+                        A l’aube des grandes vacances, à 62 ans… Je n’ai pas
+                        envie de m’arrêter…J’ai encore et toujours envie de «
+                        passer »… Car ma vie pro se résume à cela : j’ai voulu
+                        devenir « passeur » : de connaissances, de techniques
+                        professionnelles, de philosophie de vie… et le métier
+                        d’enseignant m’a comblée avec cette rencontre si
+                        singulière de personnes qui préparaient le CAP petite
+                        enfance, le BEP carrières sanitaires et sociales, le bac
+                        pro ASSP, SPVL, les métiers d’aide à domicile et du
+                        travail social (équivalence bac +3) …. Un grand écart,
+                        pouvez-vous penser… Mais de mon point de vue, pas du
+                        tout ! Que de rencontres et de cheminement personnel au
+                        travers de toutes ces personnes, adolescents, adultes,
+                        en formation initiale comme en formation continue, dans
+                        le cadre d’une certification diplômante classique ou en
+                        VAE !!!
+                        <br />
+                        <br />
+                        Sitôt que j’ai compris le « point de vue » de la
+                        personne, ciblé ses atouts, ses envies, ce qui l’anime
+                        et la met en projet, le travail s’enclenche dans cette
+                        alchimie de plaisir partagé. Il est passionnant de la
+                        voir développer ses connaissances et techniques de
+                        travail en prenant confiance en elle et en développant
+                        les « fameuses » compétences psychosociales chères à
+                        tous les employeurs !
+                        <br />
+                        <br />
+                        Et puis de multiples fois au cours de ce temps de 42 ans
+                        qui m’a paru si court, je me suis sentie enfermée dans
+                        ce cadre quelquefois très figé de l’Education Nationale
+                        ! Il m’est donné la chance, par cette rencontre avec
+                        Delphine et les membres de MELTING HEARTS, de
+                        concrétiser toutes ces idées construites au cours de mon
+                        expérience. 
+                     
+                        <p class="intro__subsubheading">
+                        Notre devise : Ensemble, nous pourrons vous
+                        aider mais vous resterez aux commandes de votre parcours
+                        et acteur de votre choix ! Nous sommes tous riches de
+                        nos singularités et les partager nous permet de nous
+                        grandir individuellement et collectivement. Alors,
+                        venez…. On vous attend avec impatience et envie !!!
+                    </p>
+                    </p>
+
+                    <a href="#intro" class="article__p"
+                        >Retourner à l'introduction</a
+                    >
                 </article>
 
                 <!-- about -->
@@ -259,9 +422,11 @@
                         Si vous voulez que nous vous aidions à changer votre
                         avenir contactez-nous !
                     </h2>
-                    <p class="article__p">
+                    <p>
                         Envoyez-nous un mail à notre adresse email:
+                        <a href="mailto:melting.hearts@gmail.com" class="article__p">
                         melting.hearts@gmail.com
+                        </a>
                     </p>
 
                     <ul class="icons">
@@ -281,10 +446,11 @@
                             >
                         </li>
                         <li>
-                            <a href="#" class="icon brands fa-github"
-                                ><span class="label">GitHub</span></a
+                            <a href="#" class="icon brands fa-linkedin"
+                                ><span class="label">Instagram</span></a
                             >
                         </li>
+                       
                     </ul>
                 </article>
 
