--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                             ><img src="images/pic01.jpg" alt=""
                         /></span>
                         <h2 class="article__subheading employee__subheading">
-                            "J’ai voulu devenir « passeur » : de connaissances,
+                            "J’ai voulu devenir passeur: de connaissances,
                             de techniques professionnelles, de philosophie de
                             vie…"
                         </h2>
