--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                         <li><a href="#about">Qui sommes-nous ?</a></li>
                         <li><a href="#offer">Notre aide</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <!--<li><a href="#elements">Elements</a></li>-->
                     </ul>
                 </nav>
             </header>
@@ -51,7 +50,9 @@
             <div id="main">
                 <!-- Intro -->
                 <article id="intro">
-                    <h2 class="major">La légende de Melting Hearts</h2>
+                    <h2 class="major article__heading">
+                        La légende de Melting Hearts
+                    </h2>
                     <span class="image main"
                         ><img src="images/introduction.jpg" alt=""
                     /></span>
@@ -114,14 +115,10 @@
                     <h2 class="article__subheading">
                         Découvrez les personnes qui travaillent avec nous:
                     </h2>
-                    <nav>
-                        <ul class="employee__nav">
-                            <li>
-                                <a href="#Delphine">Delphine Ragueneau</a>
-                            </li>
-                            <li><a href="#Brigitte">Brigitte Gautier</a></li>
-                        </ul>
-                    </nav>
+                    <div class="employee__item article__p">
+                        <a href="#Delphine">- Delphine Ragueneau</a>
+                        <a href="#Brigitte">- Brigitte Gautier</a>
+                    </div>
                 </article>
 
                 <!-- Employees -->
@@ -206,9 +203,10 @@
                         combinaison qui marche à 100 %!:)
                     </p>
 
-                    <a href="#intro" class="article__p"
-                        >Retourner à l'introduction</a
-                    >
+                    <div class="employee__item article__p">
+                        <a href="#Brigitte">- Brigitte Gautier</a>
+                        <a href="#intro">- Retourner à l'introduction</a>
+                    </div>
                 </article>
 
                 <!-- Brigitte -->
@@ -220,12 +218,11 @@
                             ><img src="images/pic01.jpg" alt=""
                         /></span>
                         <h2 class="article__subheading employee__subheading">
-                            "J’ai voulu devenir passeur: de connaissances,
-                            de techniques professionnelles, de philosophie de
-                            vie…"
+                            "J’ai voulu devenir passeur: de connaissances, de
+                            techniques professionnelles, de philosophie de vie…"
                         </h2>
                     </div>
-                    <p class="">
+                    <p>
                         A l’aube des grandes vacances, à 62 ans… Je n’ai pas
                         envie de m’arrêter…J’ai encore et toujours envie de «
                         passer »… Car ma vie pro se résume à cela : j’ai voulu
@@ -260,21 +257,22 @@
                         ! Il m’est donné la chance, par cette rencontre avec
                         Delphine et les membres de MELTING HEARTS, de
                         concrétiser toutes ces idées construites au cours de mon
-                        expérience. 
-                     
-                        <p class="intro__subsubheading">
-                        Notre devise : Ensemble, nous pourrons vous
-                        aider mais vous resterez aux commandes de votre parcours
-                        et acteur de votre choix ! Nous sommes tous riches de
-                        nos singularités et les partager nous permet de nous
-                        grandir individuellement et collectivement. Alors,
-                        venez…. On vous attend avec impatience et envie !!!
-                    </p>
+                        expérience.
                     </p>
 
-                    <a href="#intro" class="article__p"
-                        >Retourner à l'introduction</a
-                    >
+                    <p class="intro__subsubheading">
+                        Notre devise : Ensemble, nous pourrons vous aider mais
+                        vous resterez aux commandes de votre parcours et acteur
+                        de votre choix ! Nous sommes tous riches de nos
+                        singularités et les partager nous permet de nous grandir
+                        individuellement et collectivement. Alors, venez…. On
+                        vous attend avec impatience et envie !!!
+                    </p>
+
+                    <div class="employee__item article__p">
+                        <a href="#Delphine">- Delphine Ragueneau</a>
+                        <a href="#intro">- Retourner à l'introduction</a>
+                    </div>
                 </article>
 
                 <!-- about -->
@@ -424,8 +422,11 @@
                     </h2>
                     <p>
                         Envoyez-nous un mail à notre adresse email:
-                        <a href="mailto:melting.hearts@gmail.com" class="article__p">
-                        melting.hearts@gmail.com
+                        <a
+                            href="mailto:melting.hearts@gmail.com"
+                            class="article__p"
+                        >
+                            melting.hearts@gmail.com
                         </a>
                     </p>
 
@@ -450,7 +451,6 @@
                                 ><span class="label">Instagram</span></a
                             >
                         </li>
-                       
                     </ul>
                 </article>
 
